--- a/CourseWorkDb/CourseWorkDb.csproj
+++ b/CourseWorkDb/CourseWorkDb.csproj
@@ -1,18 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20191124210704_Identity2.cs" />
-    <Compile Remove="Migrations\20191124210704_Identity2.Designer.cs" />
-    <Compile Remove="Migrations\RationingDb\20191207222644_RationingDb1.cs" />
-    <Compile Remove="Migrations\RationingDb\20191207222644_RationingDb1.Designer.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Aspose.Diagram" Version="19.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
+    <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.1">
